--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
 
                 <td>
                     <a href="{{ url_for('editar', id=pessoa.id ) }}">Editar</a>
+                    <a href="{{ url_for('deletar', id=pessoa.id ) }}">deletar</a>
                 </td>
             </tr>
             {% endfor %}
